# artindex

./: .env.example  .gitignore  Dockerfile  Home.py  app.py  db.py  docker-compose.yml  pyproject.toml  requirements.txt  scraper.py
.streamlit/: config.toml
pages/: 1_Vaal.py  2_Haus.py
sql/: schema.sql
utils/: db.py  scraper.py
