[tool.poetry]
name = "artindex"
version = "0.2.0"
description = "Kanvas.AI Art Index - Estonian art auction analytics"
authors = ["Julian Kaljuvee"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.24"
pandas = ">=1.5"
plotly = ">=5.13"
streamlit = "*"
psycopg2-binary = "*"
python-dotenv = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
